--- a/druber/view/style.css
+++ b/druber/view/style.css
@@ -1,8 +1,13 @@
-body{
+:root {
+    --travel-progress: 0;
+    --battery-level: 0;
+}
+
+body {
     background-color: rgb(0, 0, 39);
 }
 
-main{
+main {
     background-color: rgb(117, 117, 117);
     width: 40%;
     height: 100%;
@@ -11,14 +16,14 @@ main{
     color: white;
 }
 
-#hero{
+#hero {
     height: 12.5rem;
     width: 100%;
     position: relative;
     color: white;
 }
 
-#hero h2{
+#hero h2 {
     padding: 2rem;
     padding-left: 46%;
     padding-top: 50px;
@@ -29,7 +34,7 @@ main{
     text-shadow: 0px 4px 4px black;
 }
 
-#hero::before{
+#hero::before {
     content: '';
     height: 80%;
     width: 100%;
@@ -40,14 +45,13 @@ main{
     box-shadow: inset 0 -100px 100px rgba(0, 0, 0, 0.589);
 }
 
-h1{
+h1 {
     text-align: center;
     padding-top: 15px;
     color: white;
 }
 
-.progresso-bar{
-    --progress: 10;
+.progresso-bar {
     height: 30px;
     padding: 5px;
     margin: 10px;
@@ -56,16 +60,15 @@ h1{
     border-radius: 5px;
 }
 
-.progresso-bar::before{
+.progresso-bar::before {
     content: "";
-    width: calc(var(--progress) * 1%);
-    background-color: hsl(calc(var(--progress) * 1.2), 80%, 50%);
+    width: calc(var(--travel-progress) * 1%);
+    background-color: hsl(calc(var(--travel-progress) * 1.2), 80%, 50%);
     transition: all 0.2s ease;
     background-image: url(https://art.pixilart.com/edfacf497337dbf.png);
 }
 
-.progresso-bateria{
-    --progress: 100;
+.progresso-bateria {
     height: 20px;
     padding: 5px;
     margin: 10px;
@@ -74,27 +77,27 @@ h1{
     border-radius: 5px;
 }
 
-.progresso-bateria::before{
+.progresso-bateria::before {
     content: '';
-    width: calc(var(--progress) * 1%);
-    background-color: hsl(calc(var(--progress)*1.2), 80%, 50%);
+    width: calc(var(--battery-level) * 1%);
+    background-color: hsl(calc(var(--battery-level)*1.2), 80%, 50%);
     transition: all 0.2s ease;
     background-image: url(https://art.pixilart.com/edfacf497337dbf.png);
 }
 
-p{
+p {
     display: inline-block;
 }
 
-h2{
+h2 {
     margin-left: 10px;
 }
 
-h3{
+h3 {
     margin-left: 10px;
 }
 
-.edit{
+.edit {
     width: 287px;
     height: 40px;
     background-color: #0B50A0;
@@ -106,27 +109,27 @@ h3{
     cursor: pointer;
 }
 
-#solicitar{
+#solicitar {
     margin-left: 30%;
 }
 
-#digita{
+#digita {
     margin-left: 10px;
 }
 
-.botao{
+.botao {
     margin-left: 50px;
 }
 
-#img{
+#img {
     display: inline-block;
 }
 
-img{
+img {
     height: 100px;
     margin: 10px;
 }
 
-#botoes{
+#botoes {
     width: 1000px;
 }
