--- a/druber/view/index.html
+++ b/druber/view/index.html
@@ -11,14 +11,12 @@
 
 <body>
     <div id="hero">
-        <h2>DRUBER</h2>
+        <h2>Druber</h2>
     </div>
     <main>
         <h1 id="status">Status</h1>
         <div class="progresso-bar"></div>
-        <p style="margin-right: 300px; margin-left: 10px;">Preparação</p>
-        <p style="margin-right: 310px;">A caminho</p>
-        <p>Entregue</p>
+        <h2 id="distancia">Distância:</h2>
         <h2 id="velocidade">Velocidade:</h2>
         <h2 id="altitude">Altitude:</h2>
         <h2 id="bateria">Bateria:</h2>
@@ -35,16 +33,11 @@
                 <img id="renner" src="https://iguatemi.com.br/jkiguatemi/sites/jkiguatemi/files/2017-12/Renner.png"
                     alt="">
             </div>
-            <div id="botoes">
-                <input type="button" value="Mercado" class="botao">
-                <input type="button" value="Farmacia" class="botao" style="margin-left: 90px;">
-                <input type="button" value="Padaria" class="botao" style="margin-left: 80px;">
-                <input type="button" value="Renner" class="botao" style="margin-left: 80px;">
-            </div>
-            <h3>Destino:</h3>
-            <input type="text" id="digita">
         </div>
-        <div id="solicitar"><input type="button" value="SOLICITAR" class="edit"></div>
+        <div>
+            <input id="solicitar" type="button" value="SOLICITAR" class="edit">
+            <input id="cancelar" type="button" value="CANCELAR" class="edit">
+        </div>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.9.0/stitch.js"></script>
