--- a/druber/view/index.html
+++ b/druber/view/index.html
@@ -36,6 +36,8 @@
         </div>
         <div>
             <input id="solicitar" type="button" value="SOLICITAR" class="edit">
+        </div>
+        <div>
             <input id="cancelar" type="button" value="CANCELAR" class="edit">
         </div>
     </main>
